# FranquetteGL

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  FranquetteGL.kdev4  NOTES.md  README.md
docs/: doxygen-fgl.css  headers.md  index.md  naming.md
docs/html/: EGL.html  dir_248832ff8517b5b7d5da1a6bc8750d99.html  dir_248832ff8517b5b7d5da1a6bc8750d99.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_71bd8339d565f3ece0c8f8c2c6d8e0e8.html  dir_71bd8339d565f3ece0c8f8c2c6d8e0e8.js  dir_83b6a00a92aa1514d8fe9a2058c94d2f.html  dir_83b6a00a92aa1514d8fe9a2058c94d2f.js  dir_cffdce227eb4123e019f39f3cedbe98e.html  dir_cffdce227eb4123e019f39f3cedbe98e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doc__egl_8h_source.html  doxygen-awesome.css  egl_8c.html  egl_8c.js  egl_8c_source.html  fegl__errors_8c_source.html  fegl__errors_8h.html  fegl__errors_8h.js  fegl__errors_8h_source.html  fgl_8h_source.html  fgl__api_8h.html  fgl__api_8h.js  fgl__api_8h_source.html  fgl__egl__khr__debug_8h_source.html  fgl__enum_8h.html  fgl__enum_8h.js  fgl__enum_8h_source.html  fgl__errors_8h.html  fgl__errors_8h_source.html  files.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  (+14 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  (+17 more)
docs/src/: doc_egl.h
include/FranquetteGL/: fgl.h  fgl_api.h
src/egl/: egl.c  fegl_errors.c
tests/: acutest.h  main.c
tests/egl/: egl_khr_debug.c
tools/: download_headers.py
(+1 files in other folders)
